--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,11 @@ body {
     linear-gradient(90deg, #00b2ff70 0.5px, transparent 0.5px);
   background-size: 150px 50px;
   background-position: -2px -2px;
+  min-height: 100vh;
+}
+
+#root {
+  min-height: 100vh;
 }
 
 .gradient {
@@ -18,6 +23,7 @@ body {
     rgba(255, 255, 255, 0.502) 50%,
     rgba(255, 255, 255, 0.475) 0%
   );
+  min-height: 100vh;
 }
 
 .gradient-t {
@@ -26,6 +32,7 @@ body {
     rgba(255, 255, 255, 0.343) 100%,
     rgba(255, 255, 255, 0) 0%
   );
+  min-height: 100vh;
 }
 
 h1,
